# home-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  LICENSE  README.md
.github/workflows/: build.yml
cmake/: arch.cmake  board.cmake  linker.cmake  linker.ld.in  soc.cmake  version.cmake  version.h.in
cmake/toolchains/: arm-none-eabi.cmake
configs/: homecore_defconfig
include/homecore/arch/: arch.h
include/homecore/kernel/: kernel.h
include/homecore/shell/: shell.h
include/homecore/soc/: soc.h
include/homecore/vfs/: vfs.h
scripts/: kconfig_generate.py  run-qemu-lm3s6965evb.sh
src/: CMakeLists.txt  Kconfig  main.c
src/arch/: CMakeLists.txt
src/arch/arm/cortex-m3/: CMakeLists.txt  arch.c  arch.cmake  arch.ld  boot.c
src/board/: CMakeLists.txt
src/board/include/board/: board.h
src/board/lm3s6965evb/: CMakeLists.txt  board.c  board.cmake  board.ld
src/board/qemu_lm3s6965evb/: CMakeLists.txt  board.c  boot.c  linker.ld  syscalls.c
src/kernel/: CMakeLists.txt  Kconfig  kernel.c  syscalls.c
src/soc/: CMakeLists.txt
src/soc/ti/lm3s6965/: CMakeLists.txt  soc.c  soc.cmake  soc.ld  soc_cmsis.h
src/subsystems/: CMakeLists.txt  Kconfig
src/subsystems/shell/: CMakeLists.txt  Kconfig  shell.c  shell.h
src/subsystems/vfs/: CMakeLists.txt  Kconfig  vfs.c
